@@ -14,7 +14,6 @@ package org.openhab.binding.konnected.internal;
 
 import static org.openhab.binding.konnected.internal.KonnectedBindingConstants.*;
 
-import java.util.Collections;
 import java.util.Dictionary;
 import java.util.Set;
 
@@ -48,7 +47,8 @@ import org.slf4j.LoggerFactory;
 @Component(configurationPid = "binding.konnected", service = ThingHandlerFactory.class)
 public class KonnectedHandlerFactory extends BaseThingHandlerFactory {
     private final Logger logger = LoggerFactory.getLogger(KonnectedHandlerFactory.class);
-    private static final Set<ThingTypeUID> SUPPORTED_THING_TYPES_UIDS = Collections.singleton(THING_TYPE_MODULE);
+    private static final Set<ThingTypeUID> SUPPORTED_THING_TYPES_UIDS = Set.of(THING_TYPE_PROMODULE,
+            THING_TYPE_WIFIMODULE);
     private static final String alias = "/" + BINDING_ID;
 
     private HttpService httpService;
